--- a/source/catalog.html
+++ b/source/catalog.html
@@ -41,17 +41,19 @@
   </svg>
 
     <header class="page-header">
-      <div class="main-navigation main-navigation__wrapper container">
+      <div class="main-navigation main-navigation__wrapper main-navigation__wrapper--border">
         <nav class="main-navigation__block">
-          <a class="main-navigation__logo" href="index.html">
-            <picture>
-              <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg">
-              <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
-              <img class="main-navigation__logo-image" src="img/logo-mobile.svg" width="191" height="39" alt="Cat Energy">
-            </picture>
-          </a>
-          <div class="main-navigation__toggle-container">
-            <button class="main-navigation__toggle" type="button">Открыть меню</button>
+          <div class="main-navigation__layout">
+            <a class="main-navigation__logo" href="index.html">
+              <picture>
+                <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg">
+                <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+                <img class="main-navigation__logo-image" src="img/logo-mobile.svg" width="191" height="39" alt="Cat Energy">
+              </picture>
+            </a>
+            <div class="main-navigation__toggle-container">
+              <button class="main-navigation__toggle" type="button"><span class="visually-hidden">Открыть меню</span></button>
+            </div>
           </div>
           <ul class="main-navigation__list">
             <li class="main-navigation__item">
@@ -339,9 +341,11 @@
           </div>
         </div>
       </section>
-      <section class="additional container">
-        <h2 class="additional__title">Дополнительные товары</h2>
-        <div class="additional__wrapper">
+      <section class="additional">
+        <div class="additional__title-layout">
+          <h2 class="additional__title container"><span>Дополнительные товары</span></h2>
+        </div>
+        <div class="additional__wrapper container">
           <div class="additional__items-container">
             <div class="additional__item">
               <div class="additional__item-layout">
@@ -412,9 +416,9 @@
       </section>
     </main>
     <footer class="page-footer">
-      <div class="page-footer__cooperation cooperation">
+      <div class="page-footer__cooperation cooperation cooperation__wrapper--grey">
         <div class="cooperation__layout container">
-          <div class="cooperation__wrapper cooperation__wrapper--white">
+          <div class="cooperation__wrapper">
             <div class="cooperation__tagline">
               <p class="cooperation__tagline-text">приглашаем к сотрудничеству дилеров!</p>
             </div>
