--- a/source/index.html
+++ b/source/index.html
@@ -62,7 +62,7 @@
                 <source media="(min-width: 768px)" srcset="img/index-can-tablet@1x.jpg 1x, img/index-can-tablet@2x.jpg 2x">
                 <img class="program-select__image" src="img/index-can-mobile@1x.png" srcset="img/index-can-mobile@1x.png 1x, img/index-can-mobile@2x.png 2x" width="280" height="271" alt="Превью «Cat Energy»">
               </picture>
-              <a class="button program-select__button button--green" href="program.html">Подобрать программу</a>
+              <a class="button program-select__button button--green" href="form.html">Подобрать программу</a>
             </section>
           </div>
 
@@ -75,14 +75,14 @@
                   <p class="program-sections__description">
                     Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
                   </p>
-                  <a class="button program-sections__button button--black-arrow" href="#">Каталог slim</a>
+                  <a class="button program-sections__button button--black-arrow" href="catalog-slim.html">Каталог slim</a>
                 </li>
                 <li class="program-sections__item program-sections__item--pro">
                   <h3 class="program-sections__title">Набор массы</h3>
                   <p class="program-sections__description">
                     Заработать авторитет среди дворовых котов <br class="program-sections__break--tablet">и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые <br class="program-sections__break--tablet">мышцы!
                   </p>
-                  <a class="button program-sections__button button--black-arrow" href="#">Каталог pro</a>
+                  <a class="button program-sections__button button--black-arrow" href="catalog-pro.html">Каталог pro</a>
                 </li>
               </ul>
             </section>
